--- a/index.html
+++ b/index.html
@@ -1612,7 +1612,7 @@
                         color: "rgba(192, 132, 252, 1)", // Roxo Principal
                         data: [9, 3, 4, 8, 9],
                         analysis:
-                            "A jornada do filme começou com reconhecimento em festivais de prestígio, como o 81º Festival Internacional de Cinema de Veneza em 2024, onde conquistou o prêmio de Melhor Roteiro, entre outros. Essa validação inicial conferiu imediatamente um alto grau de capital simbólico. A acumulação sequencial de capital simbólico, que começou em Veneza e progrediu por prêmios regionais até culminar no Globo de Ouro e no Oscar, ilustra um processo de validação estratégico e cumulativo. Cada distinção funcionou como um degrau, elevando o perfil do filme e aumentando seu valor no campo cinematográfico global, o que, por sua vez, influenciou diretamente as indicações e vitórias subsequentes.",
+                            "A jornada do filme começou com reconhecimento em festivais de prestígio, como o 81º Festival Internacional de Cinema de Veneza em 2024, onde conquistou o prêmio de Melhor Roteiro, entre outros. Essa validação inicial conferiu imediatamente um alto grau de capital simbólico.",
                     },
                     {
                         id: "guzman",
@@ -1639,7 +1639,7 @@
                         color: "rgba(255, 159, 127)", // Verde
                         data: [8, 1, 8, 10, 7],
                         analysis:
-                            "Um dos impactos estruturais do sucesso do filme é o aumento direto da representação brasileira na Academia de Artes e Ciências Cinematográficas (AMPAS). Em 2025, após a vitória do filme no Oscar, vários membros-chave de sua equipe foram convidados a se juntar à Academia. Esses convites, que incluíram os roteiristas, Fernanda Torres, a produtora, o diretor de fotografia e a figurinista, foram 'não apenas um reconhecimento individual; foi um aumento do poder de influência do cinema brasileiro dentro do campo'. A filiação à AMPAS é uma forma de capital social que concede acesso a redes e poder de voto, aumentando a voz e a influência coletiva do cinema brasileiro na instituição global mais poderosa.",
+                            "Um dos impactos estruturais do sucesso do filme é o aumento direto da representação brasileira na Academia de Artes e Ciências Cinematográficas. Em 2025, após a vitória do filme no Oscar, sua equipe foi convidada a se juntar à Academia. Esses convites, que incluíram os roteiristas, Fernanda Torres, a produtora, o diretor de fotografia e a figurinista, foram 'não apenas um reconhecimento individual; foi um aumento do poder de influência do cinema brasileiro dentro do campo",
                     },
                     {
                         id: "outro",
