--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@
                         color: "rgba(100, 0, 0)", // Verde
                         data: [10, 9, 8, 10, 7],
                         analysis:
-                            "A trajetória individual de Fernanda Torres exemplifica a conversão de capital simbólico em influência social direta. Além de suas vitórias e indicações, seu status elevado é sublinhado por sua nomeação como membro do júri da competição principal do 82º Festival de Cinema de Veneza em 2025. Esse papel a coloca em uma posição poder cultural, permitindo-lhe moldar diretamente o reconhecimento e a valorização de novas obras.",
+                            "Além de suas vitórias e indicações, seu status elevado é sublinhado por sua nomeação como membro do júri da competição principal do 82º Festival de Cinema de Veneza em 2025. Esse papel a coloca em uma posição poder cultural, permitindo-lhe moldar diretamente o reconhecimento e a valorização de novas obras.",
                     },
                     {
                         id: "Estudo de Caso",
