--- a/index.html
+++ b/index.html
@@ -729,18 +729,18 @@
                         <p class="py-2">A mídia brasileira, particularmente o Grupo Globo, desempenhou um papel crucial
                             na amplificação do sucesso do filme. Veículos como o G1 e o Fantástico destacaram a vitória
                             de Fernanda Torres no Globo de Ouro como um marco inédito e o Oscar do filme como um feito
-                            histórico para o cinema nacional. A NSC Total, por sua vez, enfatizou como a vitória do
+                            histórico para o cinema nacional. O NSC, por sua vez, enfatizou como a vitória do
                             Oscar trouxe visibilidade e "abriu portas para novas oportunidades" para o cinema
                             brasileiro, citando a nomeação do Brasil como País de Honra no Marché du Film de Cannes em
-                            2025</p>
+                            2025.</p>
 
                         <p class="py-2">A viabilidade comercial do filme também foi sustentada por uma sofisticada
                             estratégia de distribuição. A parceria entre produtoras tradicionais e uma grande plataforma
                             de streaming (Globoplay) como coprodutora e detentora dos direitos de streaming doméstico
                             foi crucial. Esse modelo híbrido garantiu um apoio financeiro e um amplo alcance
                             pós-lançamento teatral.</p>
-                        <p class="py-2">A Sony Pictures Releasing cuidou da distribuição nacional, enquanto a Sony
-                            Pictures Classics adquiriu os direitos internacionais, lançando estrategicamente o filme nos
+                        <p class="py-2">A Sony cuidou da distribuição nacional e adquiriu os direitos internacionais,
+                            lançando estrategicamente o filme nos
                             EUA para qualificação ao Oscar. A aquisição antecipada, mesmo antes da pós-produção, indica
                             forte confiança no potencial de premiação do filme.</p>
                         <p class="py-2"> A campanha "For Your Consideration" e a expansão estratégica das exibições nos
