--- a/index.html
+++ b/index.html
@@ -745,8 +745,7 @@
                             forte confiança no potencial de premiação do filme.</p>
                         <p class="py-2"> A campanha "For Your Consideration" e a expansão estratégica das exibições nos
                             EUA foram esforços deliberados para influenciar os votantes da Academia. O sucesso do filme
-                            é um testemunho da eficácia de uma estratégia de distribuição e marketing bem executada e
-                            multiplataforma.
+                            é um testemunho da eficácia de uma estratégia de distribuição e campanha bem executada.
                         </p>
 
                     </div>
